This commit is fixing the btn-line spacing display

--- a/css/styles.css
+++ b/css/styles.css
@@ -406,8 +406,7 @@ body {
       .overview__heading {
         font-size: 1rem;
         font-weight: 400;
-        width: 17rem;
-        padding: 1rem 1rem; } }
+        padding: 1rem .8rem; } }
   .overview__stars {
     margin-right: auto;
     display: flex; }
@@ -436,7 +435,8 @@ body {
     justify-content: center; }
     @media only screen and (max-width: 37.5em) {
       .overview__rating {
-        padding: 0 1.5rem; } }
+        padding: 0 1rem;
+        margin-left: .5rem; } }
   .overview__rating-average {
     font-size: 2.25rem;
     font-weight: 400; }
@@ -453,7 +453,6 @@ body {
 .btn-inline {
   border: none;
   color: var(--color-primary);
-  font-size: inherit;
   font-size: 1.6rem;
   border-bottom: .1rem solid currentColor;
   padding-bottom: .2rem;
@@ -462,6 +461,9 @@ body {
   cursor: pointer;
   transition: all .2s;
   text-align: left; }
+  @media only screen and (max-width: 37.5em) {
+    .btn-inline {
+      font-size: 1.4rem; } }
   .btn-inline span {
     margin-left: .3rem;
     transition: margin-left .2s; }
